--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caisas Koehlin - Interactive Resume</title>
+    <title>About Me</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
@@ -57,9 +57,8 @@
     <h2 class="text-center mt-1">Bio</h2>
 </div>
 
-<div class="quote-square">
 
-</div>
+
 
 
 
@@ -92,19 +91,27 @@
         </div>
     </div>
 
-    <!--Accordion with my top 5-->
+    <!--Accordion My Top 5-->
     <div class="mt-5">
     <h2 class="text-center">My Top 5</h2>
     <div class="accordion" id="accordionExample">
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                Favorite Literary Genres
+                Top 5 Literary Genres
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-              Gothic horror, fantasy and science fiction
+              1. Gothic Horror
+              <br>
+              2. Fantasy
+              <br>
+              3. Science Fiction
+              <br>
+              4. Poetry
+              <br>
+              5. Biography
             </div>
           </div>
         </div>
@@ -164,7 +171,7 @@
                 <br>
                 3. Oslo hat by Petiteknit
                 <br>
-                4. A vest but in reality probably a sock
+                4. Sweater vest but in reality probably a sock
                 <br>
                 5. Frankensocks™, socks made of scrap yarn from all the other finished socks.
               </div>
@@ -208,13 +215,13 @@
 
 <div class="d-flex justify-content-center">
     <div class="p-2">
-        <a href="mailto:caisa.kohlin@medieinstitutet.se"><i class="fa-solid fa-envelope i-color"></i></a>
+        <a href="mailto:caisa.kohlin@medieinstitutet.se"><i class="fa-solid fa-envelope accent-color"></i></a>
     </div>
     <div class="p-2">
         <a class="nav-link" href="https://www.linkedin.com/in/caisa-koehlin/"><i>
-                <i class="fa-brands fa-linkedin i-color"></i></i></a>
+                <i class="fa-brands fa-linkedin accent-color"></i></i></a>
     </div>
     <div class="p-2">
-        <a class="nav-link" href="https://github.com/caisak"><i class="fa-brands fa-github i-color"></i></a>
+        <a class="nav-link" href="https://github.com/caisak"><i class="fa-brands fa-github accent-color"></i></a>
     </div>
 </div>
