--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
     <!--Project cards-->
     <h1 class="text-center">Portfolio</h1>
     <div class="flex row justify-content-evenly">
-        <div class="card border-light col-sm-5 mt-2 p-2">
+        <div id="shade" class="card border-light col-sm-5 mt-2 p-2">
             <img class="PGM-img" src="./PGM-project.png" alt="image of project gutenberg modernized">
             <div class="card-body">
                 <h4 class="card-title"><a href="https://caisak.github.io/Project-Gutenberg-modernized/">Project Gutenberg Modernized</a></h4>
@@ -74,7 +74,7 @@
             </div>
         </div>
 
-        <div class="card border-light col-sm-5 mt-2 p-2">
+        <div id="shade" class="card border-light col-sm-5 mt-2 p-2">
             <img class="PGM-img" src="./rock-p-s.png" alt="image of project gutenberg modernized">
             <div class="card-body">
                 <h4 class="card-title"><a href="https://caisak.github.io/Rock-Paper-Scissors/">Rock Paper Scissors</a></h4>
@@ -107,13 +107,13 @@
 
 <div class="d-flex justify-content-center">
     <div class="p-2">
-        <a href="mailto:caisa.kohlin@medieinstitutet.se"><i class="fa-solid fa-envelope i-color"></i></a>
+        <a href="mailto:caisa.kohlin@medieinstitutet.se"><i class="fa-solid fa-envelope accent-color"></i></a>
     </div>
     <div class="p-2">
         <a class="nav-link" href="https://www.linkedin.com/in/caisa-koehlin/"><i>
-                <i class="fa-brands fa-linkedin i-color"></i></i></a>
+                <i class="fa-brands fa-linkedin accent-color"></i></i></a>
     </div>
     <div class="p-2">
-        <a class="nav-link" href="https://github.com/caisak"><i class="fa-brands fa-github i-color"></i></a>
+        <a class="nav-link" href="https://github.com/caisak"><i class="fa-brands fa-github accent-color"></i></a>
     </div>
 </div>
